...
  @override
  String cartEachPrice(String price) {
    return '$price pro Stück';
  }

  @override
  String get checkout => 'Bezahlen';

  @override
  String get checkoutProcessing => 'Wird verarbeitet…';

  @override
  String get checkoutBlockedByLimit => 'Limit erreicht';
...
